--- a/cli/cms/src/pages/API.html
+++ b/cli/cms/src/pages/API.html
@@ -1,3 +1,4 @@
+<h1>API PAGE</h1>
 {{#daikoku-api "{{daikoku-path-param '0'}}"}}
 
 {{#daikoku-template-wrapper "61fbaa95320100dbfca04d11" title="{{api.name}}" desc="Description de mon API" }}
@@ -13,6 +14,6 @@
 <button type="button" class="btn btn-secondary mt-3">
     <a href="{{daikoku-page-url "62027afe1501007a8439fa48"}}" style="color: #fff; text-decoration: none">Retour à la liste d'APIS</a>
 </button>
-
+ 
 {{/daikoku-template-wrapper}}
 {{/daikoku-api}}
