--- a/cli/cms/src/pages/404.html
+++ b/cli/cms/src/pages/404.html
@@ -1,7 +1,16 @@
-<DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        <h1>404 not found</h1>
-    </body>
-</html>
+title: Test
+_id: "620292fd1501007a8439fc48"
+_tenant: default
+_deleted: false
+visible: true
+authenticated: false
+name: 404
+content_type: "text/html"
+path: /404
+exact: true
+last_published_date: 1644501661509
+---
+
+<div>
+    <h1>{{title}} : 404 not found</h1>
+</div>
