support deep routage

--- a/cli/cms/src/blocks/plans.html
+++ b/cli/cms/src/blocks/plans.html
@@ -47,5 +47,5 @@
     </div>
     {{/daikoku-plans}}
     
-    <script src="{{daikoku-page-url "6204edef290100e89f5d2d35"}}"></script>
+    <script src="{{daikoku-page-url "scripts/apikey_manager.js"}}"></script>
 </div>
