--- a/cli/cms2/src/blocks/Card.html
+++ b/cli/cms2/src/blocks/Card.html
@@ -11,7 +11,7 @@
     {{#unless teamView}}
     <div class="mx-auto my-3">
       <button type="button" class="btn btn-success">
-        <a href="{{daikoku-page-url "6203bde7190100d46b9e3777"}}{{slug}}" style="color: #fff; text-decoration: none">Voir l'API</a>
+        <a href="{{daikoku-page-url "/api"}}{{slug}}" style="color: #fff; text-decoration: none">Voir l'API</a>
       </button>
     </div>
     {{/unless}}
