--- a/cli/cms2/src/blocks/navbar.html
+++ b/cli/cms2/src/blocks/navbar.html
@@ -12,7 +12,7 @@
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="{{daikoku-page-url "620d09404b0100fd16093640"}}">Mes APIS privées</a>
         </li>
         <li class="nav-item">
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item me">
           <a class="nav-link" href="{{daikoku-page-url "620e21a32d010066230c91eb"}}">Mon équipe perso.</a>
-        </li>
+        </li> -->
       </ul>
       <ul class="navbar-nav ms-auto me-3">
         <div> 
