add authentication mode on watch

--- a/cli/coucou/dev/src/pages/offre-velo.html
+++ b/cli/coucou/dev/src/pages/offre-velo.html
@@ -1,7 +1,7 @@
 _exact: 'false'
 _last_published_date: '1706520614419'
 _visible: 'true'
-_authenticated: 'false'
+_authenticated: true
 
 ---
 {{#daikoku-template-wrapper "/blocks/IAAS-BASIC-template.html" url_retour="/_/univers-mobilite"}}
