starting assets command

--- a/cli/coucou/dev/src/pages/home.html
+++ b/cli/coucou/dev/src/pages/home.html
@@ -1,9 +1,9 @@
-_last_published_date: '1706520690725'
 _visible: 'true'
-_exact: 'true'
+_exact: 'false'
 _authenticated: 'false'
 
 ---
+
 {{#daikoku-template-wrapper "/blocks/IAAS-BASIC-template.html"}}
   <!-- Introduction-->
 <div class="container p-4">
