--- a/cli/coucou/dev/src/pages/parcours-api.html
+++ b/cli/coucou/dev/src/pages/parcours-api.html
@@ -1,9 +1,9 @@
 _authenticated: 'false'
-_last_published_date: '1706520703310'
-_exact: 'false'
 _visible: 'true'
+_exact: 'false'
 
 ---
+
 {{#daikoku-template-wrapper "/blocks/IAAS-BASIC-template.html" url_retour="/"}}
 
 <!-- Univers Mobilité -->
@@ -46,7 +46,7 @@ _visible: 'true'
           </div>
         </div>
         <div class="col-lg-4 d-none d-lg-block">
-          <img src="https://daikokucms-images.opunmaif.fr/icon-parcours-api.jpg" alt="icon parcours API">
+          <img src="https://daikokucms-images.opunmaif.fr/icon/pages/parcours-api.html.jpg" alt="icon parcours API">
         </div>
       </div>
     </div>
