--- a/daikoku/javascript/index.html
+++ b/daikoku/javascript/index.html
@@ -4,12 +4,9 @@
     <title>Daikoku</title>
     <meta name="description" content="Daikoku" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+    <meta name="google" content="notranslate">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" type="image/ico" href="/assets/logo/Icon.png?hash=@(env.currentHash)">
-    <link rel="icon" sizes="128x128" href="/assets/logo/128x128.png?hash=@(env.currentHash)">
-    <link rel="apple-touch-icon" href="/assets/logo/128x128.png?hash=@(env.currentHash)">
-    <link rel="apple-touch-startup-image" href="/assets/logo/512x512.png?hash=@(env.currentHash)">
-    <link rel="icon" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
   </head>
   <body>
     <div id="app"></div>
