--- a/daikoku/javascript/index.html
+++ b/daikoku/javascript/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="portal-root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
