--- a/daikoku/javascript/index.html
+++ b/daikoku/javascript/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
     <meta name="google" content="notranslate">
     <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="stylesheet" href="/_/customization/color-theme.css">
+    <link rel="stylesheet" href="/_/customization/style.css">
   </head>
   <body>
     <div id="app"></div>
     <div id="portal-root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script type="text/javascript" src="/_/customization/script.js"></script>
   </body>
 </html>
